--- a/pom.xml
+++ b/pom.xml
@@ -205,6 +205,7 @@
 						<includeOnlyProperty>git.branch</includeOnlyProperty>
 						<includeOnlyProperty>git.build.time</includeOnlyProperty>
 						<includeOnlyProperty>git.commit.id</includeOnlyProperty>
+						<includeOnlyProperty>git.commit.message.short</includeOnlyProperty>
 					</includeOnlyProperties>
 					<failOnNoGitDirectory>true</failOnNoGitDirectory>
 					<failOnUnableToExtractRepoInfo>true</failOnUnableToExtractRepoInfo>
